# HTTP-web-server

./: README.md
XCODE http.xcodeproj/: project.pbxproj
XCODE http.xcodeproj/project.xcworkspace/xcuserdata/vtnc.xcuserdatad/: UserInterfaceState.xcuserstate
XCODE http.xcodeproj/xcuserdata/vtnc.xcuserdatad/xcschemes/: xcschememanagement.plist
XCODE http/Networking/Sockets/: BindingSocket.hpp  ClassicSocket.cpp  ConnectingSocket.hpp  ListneningSocket.cpp
XCODE http/Project/: vblib.cpp  vblib.hpp
XCODE.http/Networking/: vblib-networking.hpp
XCODE.http/Networking/Sockets/: BindingSocket.cpp  ClassicSocket.hpp  ListneningSocket.hpp  vblib-http.hpp
XCODE.http/Project/: CMakeCache.txt  CMakeLists.txt  Makefile  XCODE_http  cmake_install.cmake  main.cpp  mainwindow.cpp  mainwindow.hpp  vblib.hpp
XCODE.http/Project/XCODE_http_autogen/: deps  moc_predefs.h
XCODE.http/Project/XCODE_http_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
server/: server.sln
server/server/: server.vcxproj  server.vcxproj.filters  something.cpp
